# renderer-rust

./: Cargo.toml  README.md  TODO_port_renderer_to_rust.txt
src/: camera.rs  lib.rs  rasterizer.rs  raterizer_test.rs
src/color/: color_test.rs  mod.rs
src/objects/: mesh.rs  mod.rs  scene.rs  shape.rs  shape_test.rs
src/texture/: mod.rs  texture_test.rs
src/texture/converter/: julia.rs  mandelbrot.rs  mod.rs  noise.rs
src/texture/filter/: mod.rs
